[package]
name = "warp_dsl"
version = "0.0.1"
authors = ["ayosec@gmail.com"]
description = "Experimental DSL for warp"
license = "MIT"
repository = "https://github.com/ayosec/warp_dsl"

[dependencies]
warp_dsl_impl = { version = "0.0.1", path = "impl" }
proc-macro-hack = "0.4"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
warp = "0.1"
